--- a/src/index.css
+++ b/src/index.css
@@ -207,7 +207,7 @@ form{
   width: 100%;
   height: 100%;
   display: flex;
-  justify-content: center;
+  justify-content: end;
   align-items: center;
   flex-direction: column;
   padding: 10px;
@@ -288,7 +288,8 @@ form{
   width: 100%;
   height: 100%;
   display: flex;
-  justify-content: flex-start;
+  justify-content: start;
+  align-items: center;
   flex-direction: column;
 }
 
@@ -302,7 +303,7 @@ form{
 }
 
 .top-nav .search-cont{
-  width: 100%;
+  width: 60%;
   height: 40px;
   background: var(--font-clr-20);
   border-radius: 40px;
@@ -350,7 +351,13 @@ form{
   align-items: center;
   flex-direction: row;
   height: 40px;
-  gap: 5px;
+  gap: 10px;
+}
+
+.user-acct-wrapper .user-btn:nth-child(2){
+  border: 4px solid var(--font-clr-20);
+  background: var(--font-clr-50);
+  outline: 2px solid var(--font-clr-50);
 }
 
 .user-acct-wrapper .user-btn{
