--- a/src/index.css
+++ b/src/index.css
@@ -202,6 +202,7 @@ form{
 }
 
 /*----------Home interface ------------*/
+/**/
 
 .homeContainer{
   width: 100%;
@@ -236,7 +237,7 @@ form{
   height: 100%;
   display: flex;
   color: white;
-  justify-content: flex-start;
+  justify-content: end;
   flex-direction: column;
 }
 
